airitreats/src/slices/ImageGrid/ImageGrid.module.scss
.container {
    background-color: var(--lighterPink);
    padding: 2rem 0;
}

.sectionTitle {
    text-align: center;
    // align-self: start;
    padding: 1rem 0.5rem;
    background-color: var(--primaryColor);
    border: var(--darkAccent1) 1px solid;
    border-right: var(--darkAccent1) 0.5rem solid;
    border-left: var(--darkAccent1) 0.25rem solid;
    border-radius: 0 1rem 1rem 0;
    z-index: 10;
}

.card {
    text-align: center;
    margin: 1.5rem 0;
    padding: 0 1rem;
}

.cardContents {
    margin-bottom: 1.5rem;
}

.img {
    width: 100%;
    height: 100%;
    aspect-ratio: 1/1;
    border-radius: 1rem 1rem 0 0;
}

.cardTitle {
    text-align: center;
    text-transform: uppercase;
    padding: 0.5rem 1rem;
    color: #fff;
    letter-spacing: 0.1rem;
    background-color: var(--overlayColor);
    border-top: #670021 1px solid;
    border-right: #670021 4px solid;
    border-left: #670021 4px solid;
    border-radius: 1rem 1rem 0 0;
}


.cardDescription {
    text-align: left;
    padding: 1.5rem 1rem 1.5rem 1rem;
    background-color: var(--lighterBlue);
    border-bottom: #005FA1 2px solid;
    border-right: #005FA1 2px solid;
    border-left: #005FA1 2px solid;
    border-radius: 0 0 1rem 1rem;
}

$breakpoint-mobile: 360px;
$breakpoint-tablet: 760px;
$breakpoint-desktop: 1280px;

@media (min-width:$breakpoint-mobile) {

    .secTitleContainer {
        display: grid;
        grid-template-columns: 5fr 1fr;

        .sectionTitle {
            grid-column: 1;
        }
    }

    .cardContents {
        display: grid;
        grid-template-columns: auto;
        grid-template-rows: auto auto auto;

        .imgContainer {
            grid-row: 1;
            grid-column: 1;
        }

        .titleContainer {
            grid-row: 1;
            grid-column: 1;
            z-index: 10;
            align-self: end;
            display: grid;
            grid-template-columns: 1fr 5fr 1fr;
            grid-template-rows: auto;

            .cardTitle {
                grid-column: 2;
            }
        }

    }

    .cardDescription {
        grid-column: 1;
        grid-row: 2 / span 2;
        margin-bottom: 1.5rem;
        padding-bottom: 3rem;
    }

    .catLinkContainer {
        margin: auto;
        grid-column: 1;
        grid-row: 3;
        z-index: 10;
    }

}

@media (min-width:$breakpoint-tablet) {
    .secTitleContainer {
        grid-template-columns: auto auto auto;

        .sectionTitle {
            grid-column: 2;
            border-right: var(--darkAccent1) 0.5rem solid;
            border-left: var(--darkAccent1) 0.5rem solid;
            border-radius: 1rem;
        }
    }

    .card {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 1fr;
        gap: 1rem;
    }


}

@media (min-width:$breakpoint-desktop) {
    .sectionContainer {
        max-width: $breakpoint-desktop;
        margin: auto;
    }

    .card {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr 1fr;
        grid-template-rows: 1fr;
        gap: 1rem;

    }

}

